<resources>
    <string name="app_name">Keep Safe</string>

    <!-- Strings de la pantalla principal -->
    <string name="btnInicio">Iniciar sesión</string>
    <string name="edtUser">Email</string>
    <string name="edtPassword">Contraseña</string>
    <string name="box">Recordar datos</string>
    <string name="btnRegistro">Registrarse</string>

    <!-- Strings del menú -->
    <string name="btnDatos">Datos personales</string>
    <string name="btnAgenda">Agenda emergencias</string>
    <string name="btnSMS">Enviar mensaje</string>
    <string name="btnUbicacion">Ubicación</string>
    <string name="btnInfo">Información</string>

    <!-- Strings de la pantalla info -->
    <string name="txtInfo">App de ayuda para gente con discapacidad auditiva</string>

    <!-- Strings de la pantalla registro -->
    <string name="btnAceptar">Aceptar</string>
    <string name="edtConfiPass">Contraseña</string>

    <!-- Strings de la pantalla datos -->
    <string name="edtNombre">Nombre</string>
    <string name="edtApellido">Apellido</string>
    <string name="edtFecha">Fecha de nacimiento</string>
    <string name="edtSexo">Sexo</string>
    <string name="edtSangre">Grupo sanguíneo</string>
    <string name="edtNum">Num.Seguridad social</string>
    <string name="btnCambiar">Cambiar contraseña</string>
    <string name="btnFoto">Cambiar foto</string>

    <!-- Strings de la pantalla cambiar contraseña -->
    <string name="edtPassActual">Actual</string>
    <string name="edtNuevaPass">Nueva </string>
    <string name="edtConfirmarPass">Confirmar </string>



</resources>
