<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/candado"
        android:src="@drawable/candado"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/btnAceptar"
        android:id="@+id/btnAceptar"
        android:layout_below="@+id/edtConfirPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/edtPassActual"
        android:id="@+id/edtPassActual"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/edtNuevaPass"
        android:id="@+id/edtNuevaPass"
        android:layout_below="@+id/edtPassActual"
        android:layout_alignStart="@+id/edtPassActual"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/edtConfiPass"
        android:id="@+id/edtConfirPass"
        android:layout_below="@+id/edtNuevaPass"
        android:layout_alignStart="@+id/edtNuevaPass"
        android:layout_marginTop="20dp" />

</RelativeLayout>