<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:foregroundGravity="right"
        android:id="@+id/logo"
        android:src="@drawable/logo"
        android:layout_gravity="right" />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/avatar"
        android:src="@drawable/avatar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="0dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/edtUser"
        android:ems="10"
        android:id="@+id/edtUsuario"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtPassword"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edtPass"
        android:text="@string/edtPassword"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAceptar"
        android:id="@+id/btnAceptar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

</LinearLayout>